Revert "Show Relevant Exclude Fields in EventBased Workflows (#25272)"
This reverts commit 06db043c517bc9858138db98674f21ebc1f59f88.